# nao-ai-server

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml
backend/: default.env  gunicorn_conf.py  manage.py  pyproject.toml  setup.cfg
backend/docker/api/: Dockerfile
backend/hackathon_nao/: asgi.py  settings.py  urls.py  wsgi.py
backend/providers/: routers.py  serializers.py  views.py
backend/providers/tests/: test_api_providers.py  test_api_serializers.py  test_base_providers.py  test_gemini_providers.py  test_llama_providers.py  test_serializers.py
backend/providers/tests/assets/: nao.png.base64
backend/providers/tests/cassettes/test_llama_providers/: llama_bigger_prompt.yaml  llama_models.yaml  llama_prompt.yaml
backend/providers/views/: __init__.py  base.py  gemini.py  llama.py
